Improved Intro and Conclusion

--- a/InteractiveResume.html
+++ b/InteractiveResume.html
@@ -64,7 +64,7 @@
         </section>
         <!-- S6 - Turnip Esports-->
         <section class ='Section'>
-                <div class = 'SectionTitle' id = 'S6Title'>Startup Experience</div>
+            <div class = 'SectionTitle' id = 'S6Title'>Startup Experience</div>
             <div class = 'S6Elem' id = 'S6Text1'>Turnip Esports</div>
             <div class = 'S6Elem' id = 'S6Text2'>Host, Commentator and Coach</div> 
             <div class = 'S6Elem' id = 'S6Text3'>Sponsored by HiRez Studios</div>
@@ -72,7 +72,15 @@
         </section>
         <!-- S7 - End Section -->
         <section class ='Section'>
-            <img ondragstart = 'return false' class = 'SectionBG' id = 'I7'>
+            <div class = 'S7Elem' id = 'S7Text1'>Thank you for visiting my website!</div>
+            <div class = 'S7Elem' id = 'S7Text2'>Feel free to send me a message at anytime!</div>
+            <div class = 'S7Elem' id = 'S7Text3'>Email: larrywu1996@gmail.com</div>
+            <div class = 'S7Elem' id = 'S7Text4'>Phone Number: 647-896-3078</div>
+            <div class = 'S7Elem' id = 'S7Wrapper'>
+                <button id = 'Github' onclick = 'window.open("https://github.com/13Legend31")'>Github</button>
+                <button id = 'LinkedIn' onclick = 'window.open("https://www.linkedin.com/in/larry-wu-698621167/")'>LinkedIn</button>
+            </div>
+            <img ondragstart = 'return false' class = 'SectionBG' id = 'I7' src = 'https://wallpapercave.com/wp/CEulB8i.jpg'>
         </section>
     </body>
     <script src = 'Script.js'></script>
