--- a/InteractiveResume.html
+++ b/InteractiveResume.html
@@ -20,7 +20,7 @@
         <!-- Sections -->
         <!-- S1 - Introduction -->
         <section class ='Section'>
-            <img ondragstart = 'return false' class = 'SectionBG' id = 'I1' src = 'https://images.pond5.com/worship-background-modern-edge-blue-footage-026057198_prevstill.jpeg'>
+            <img ondragstart = 'return false' class = 'SectionBG' id = 'I1' src = 'https://raw.githubusercontent.com/13Legend31/Resume-Interactive-Template/master/Images/Intro.jpg'>
             <div id = 'LarryWu'>Larry Wu</div>
             <button class = 'S1Buttons' id = 'EducationButton'>Education</button>
             <button class = 'S1Buttons' id = 'SkillsButton'>Programming Skills</button>
@@ -80,7 +80,7 @@
                 <button id = 'Github' onclick = 'window.open("https://github.com/13Legend31")'>Github</button>
                 <button id = 'LinkedIn' onclick = 'window.open("https://www.linkedin.com/in/larry-wu-698621167/")'>LinkedIn</button>
             </div>
-            <img ondragstart = 'return false' class = 'SectionBG' id = 'I7' src = 'https://wallpapercave.com/wp/CEulB8i.jpg'>
+            <img ondragstart = 'return false' class = 'SectionBG' id = 'I7' src = 'https://raw.githubusercontent.com/13Legend31/Resume-Interactive-Template/master/Images/ContactInfo.jpg'>
         </section>
     </body>
     <script src = 'Script.js'></script>
